package cl.ucn.disc.dsm.pictwin.backendpt.model;

/**
 * El estado del usuario
 */

public enum State {
    ACTIVE,
    BANNED
}
